yamls/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rick-morty-api
  namespace: rick-morty
  labels:
    app: rick-morty-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rick-morty-api
  template:
    metadata:
      labels:
        app: rick-morty-api
    spec:
      containers:
        - name: rick-morty-api
          image: localhost/rick-and-morty-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
