yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rick-morty-api
  namespace: rick-morty
spec:
  selector:
    app: rick-morty-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
