yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rick-morty-api
  namespace: rick-morty
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
           service:
              name: rick-morty-api
              port:
                number: 80
